--- a/DataProxy/DataProxy.csproj
+++ b/DataProxy/DataProxy.csproj
@@ -44,6 +44,8 @@
     <Compile Include="Creators\IDbCreator.cs" />
     <Compile Include="Executors\IQueryExecutor.cs" />
     <Compile Include="Executors\SqlServerExecutor.cs" />
+    <Compile Include="Helpers\IHelper.cs" />
+    <Compile Include="Helpers\SqlServerHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Creators\SqlServerCreator.cs" />
   </ItemGroup>
