--- a/DataProxy/DataProxy.csproj
+++ b/DataProxy/DataProxy.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="DataService.cs" />
     <Compile Include="Creators\IDbCreator.cs" />
+    <Compile Include="DbmsType.cs" />
     <Compile Include="Executors\IQueryExecutor.cs" />
     <Compile Include="Executors\SqlServerExecutor.cs" />
     <Compile Include="Helpers\IHelper.cs" />
