Attached connection string via web.config file

--- a/CursachPrototype/Web.config
+++ b/CursachPrototype/Web.config
@@ -10,6 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="IdentityDb" providerName="System.Data.SqlClient" connectionString="Data Source=AMDFXPC\SQLEXPRESS;AttachDbFilename=|DataDirectory|\IdentityDb2.mdf;Initial Catalog=IdentityDb2;Integrated security=True" />
+    <add name="SqlServerMaster" providerName="System.Data.SqlClient" connectionString="Data Source=AMDFXPC\SQLEXPRESS;Initial Catalog=master;Integrated security=True" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
