--- a/CursachPrototype/CursachPrototype.csproj
+++ b/CursachPrototype/CursachPrototype.csproj
@@ -185,6 +185,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\QueryController.cs" />
     <Compile Include="Controllers\UserRoomController.cs" />
+    <Compile Include="ExtensionMethods\FromServerSelectionVmToCreateDbObj.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -195,6 +196,10 @@
     <Compile Include="Migrations\201701202121406_DataMigration2.cs" />
     <Compile Include="Migrations\201701202121406_DataMigration2.Designer.cs">
       <DependentUpon>201701202121406_DataMigration2.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201701270037540_DataMigration3.cs" />
+    <Compile Include="Migrations\201701270037540_DataMigration3.Designer.cs">
+      <DependentUpon>201701270037540_DataMigration3.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Accounting\AppIdentityContext.cs" />
@@ -249,6 +254,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201701202121406_DataMigration2.resx">
       <DependentUpon>201701202121406_DataMigration2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201701270037540_DataMigration3.resx">
+      <DependentUpon>201701270037540_DataMigration3.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
