--- a/DataProxy/DataProxy.csproj
+++ b/DataProxy/DataProxy.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Executors\SqlServerExecutor.cs" />
     <Compile Include="Helpers\IHelper.cs" />
     <Compile Include="Helpers\SqlServerHelper.cs" />
+    <Compile Include="Models\CreateDatabaseObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Creators\SqlServerCreator.cs" />
   </ItemGroup>
