--- a/CursachPrototype/Web.config
+++ b/CursachPrototype/Web.config
@@ -10,8 +10,9 @@
   </configSections>
   <connectionStrings>
     <add name="IdentityDb" providerName="System.Data.SqlClient" connectionString="Data Source=AMDFXPC\SQLEXPRESS;AttachDbFilename=|DataDirectory|\FastSqlIdentity.mdf;Initial Catalog=FastSqlIdentity;Integrated security=True" />
+    <add name="IdentityDbOleDb" connectionString="Provider=SQLOLEDB;Data Source=AMDFXPC\SQLEXPRESS;Initial Catalog=FastSqlIdentity;Integrated Security = SSPI"/>
     <add name="SqlServerMaster" providerName="System.Data.SqlClient" connectionString="Data Source=AMDFXPC\SQLEXPRESS;Initial Catalog=master;Integrated security=True" />
-    <add name="SqlServerMasterOleDb" connectionString="Provider=SQLOLEDB;Data Source=AMDFXPC\SQLEXPRESS;Initial Catalog=FastSqlIdentity;Integrated Security = SSPI"/>
+    
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
