--- a/CursachPrototype/Web.config
+++ b/CursachPrototype/Web.config
@@ -9,9 +9,9 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="IdentityDb" providerName="System.Data.SqlClient" connectionString="Data Source=AMDFXPC\SQLEXPRESS;AttachDbFilename=|DataDirectory|\FastSqlIdentity.mdf;Initial Catalog=FastSqlIdentity;Integrated security=True" />
-    <add name="IdentityDbOleDb" connectionString="Provider=SQLOLEDB;Data Source=AMDFXPC\SQLEXPRESS;Initial Catalog=FastSqlIdentity;Integrated Security = SSPI"/>
-    <add name="SqlServerMaster" providerName="System.Data.SqlClient" connectionString="Data Source=AMDFXPC\SQLEXPRESS;Initial Catalog=master;Integrated security=True" />
+    <add name="IdentityDb" providerName="System.Data.SqlClient" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=FastSqlIdentity;Integrated security=True" />
+    <add name="IdentityDbOleDb" connectionString="Provider=SQLOLEDB;Data Source=.\SQLEXPRESS;Initial Catalog=FastSqlIdentity;Integrated Security = SSPI"/>
+    <add name="SqlServerMaster" providerName="System.Data.SqlClient" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=master;Integrated security=True" />
     
   </connectionStrings>
   <appSettings>
