--- a/CursachPrototype/CursachPrototype.csproj
+++ b/CursachPrototype/CursachPrototype.csproj
@@ -184,6 +184,8 @@
     <Content Include="Global.asax" />
     <Content Include="Scripts\CopyToClipboard.js" />
     <Content Include="Scripts\jquery-3.1.1.min.js" />
+    <Content Include="Scripts\jquery.unobtrusive-ajax.js" />
+    <Content Include="Scripts\jquery.unobtrusive-ajax.min.js" />
     <Content Include="Scripts\Popup.js" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
@@ -209,6 +211,7 @@
     <Compile Include="Models\Accounting\DataBaseInfoManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\LoginVm.cs" />
+    <Compile Include="ViewModels\QueryExecutorVm.cs" />
     <Compile Include="ViewModels\RegisterVm.cs" />
     <Compile Include="ViewModels\ServerSelectionVm.cs" />
   </ItemGroup>
