--- a/CursachPrototype/CursachPrototype.csproj
+++ b/CursachPrototype/CursachPrototype.csproj
@@ -210,10 +210,11 @@
     <Compile Include="Models\Accounting\DataBaseInfo.cs" />
     <Compile Include="Models\Accounting\DataBaseInfoManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\CreateAnonymouslyDbVm.cs" />
     <Compile Include="ViewModels\LoginVm.cs" />
     <Compile Include="ViewModels\QueryExecutorVm.cs" />
     <Compile Include="ViewModels\RegisterVm.cs" />
-    <Compile Include="ViewModels\ServerSelectionVm.cs" />
+    <Compile Include="ViewModels\CreateDbVm.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
@@ -234,6 +235,7 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\UserRoom\Delete.cshtml" />
     <None Include="Properties\PublishProfiles\IISPub.pubxml" />
+    <Content Include="Views\CsDispatcher\IndexAnonymous.cshtml" />
     <None Include="Views\UserRoom\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
