--- a/CursachPrototype/Web.config
+++ b/CursachPrototype/Web.config
@@ -10,6 +10,7 @@
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
     <add name="IdentityDb" providerName="System.Data.SqlClient" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=FastSqlIdentity;Integrated security=True" />
+    <add name="Hangfire" providerName="System.Data.SqlClient" connectionString="Server=.\SQLEXPRESS;Database=Hangfire;Integrated security=SSPI"/>
     <add name="IdentityDbOleDb" connectionString="Provider=SQLOLEDB;Data Source=.\SQLEXPRESS;Initial Catalog=FastSqlIdentity;Integrated Security = SSPI" />
     <add name="SqlServerMaster" providerName="System.Data.SqlClient" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=master;Integrated security=True" />
     
