--- a/CursachPrototype/packages.config
+++ b/CursachPrototype/packages.config
@@ -2,6 +2,9 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
+  <package id="Hangfire" version="1.6.8" targetFramework="net452" />
+  <package id="Hangfire.Core" version="1.6.8" targetFramework="net452" />
+  <package id="Hangfire.SqlServer" version="1.6.8" targetFramework="net452" />
   <package id="jQuery" version="3.1.1" targetFramework="net452" />
   <package id="jQuery.Validation" version="1.16.0" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights" version="2.2.0" targetFramework="net452" />
