Added delete row feature

--- a/CursachPrototype/CursachPrototype.csproj
+++ b/CursachPrototype/CursachPrototype.csproj
@@ -266,6 +266,7 @@
     <Content Include="Views\DisplayTable\Index.cshtml" />
     <Content Include="Views\DisplayTable\EditRow.cshtml" />
     <Content Include="Views\Shared\_Message.cshtml" />
+    <Content Include="Views\DisplayTable\DeleteRow.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
