Implemented ui to add new record to db

--- a/CursachPrototype/CursachPrototype.csproj
+++ b/CursachPrototype/CursachPrototype.csproj
@@ -269,6 +269,7 @@
     <Content Include="Views\Shared\_Message.cshtml" />
     <Content Include="Views\DisplayTable\DeleteRow.cshtml" />
     <Content Include="Views\DisplayTable\EditTable.cshtml" />
+    <Content Include="Views\DisplayTable\AddRow.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
