--- a/CursachPrototype/CursachPrototype.csproj
+++ b/CursachPrototype/CursachPrototype.csproj
@@ -251,6 +251,8 @@
     <Compile Include="Models\Accounting\AppUser.cs" />
     <Compile Include="Models\Accounting\AppUserManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QueryHelpers\SqlServerHelper.cs" />
+    <Compile Include="QueryHelpers\IHelper.cs" />
     <Compile Include="ViewModels\AnonymousDbVm.cs" />
     <Compile Include="ViewModels\CreateColumnVm.cs" />
     <Compile Include="ViewModels\DbVm.cs" />
