--- a/CursachPrototype/CursachPrototype.csproj
+++ b/CursachPrototype/CursachPrototype.csproj
@@ -199,9 +199,42 @@
     <Content Include="Content\Bootstrap\bootstrap.css" />
     <Content Include="Content\Bootstrap\bootstrap.min.css" />
     <Content Include="Content\DarkTheme.min.css" />
+    <Content Include="Content\DarkTheme\css\creative.css" />
+    <Content Include="Content\DarkTheme\css\creative.min.css" />
+    <Content Include="Content\DarkTheme\img\header.jpg" />
+    <Content Include="Content\DarkTheme\img\portfolio\fullsize\1.jpg" />
+    <Content Include="Content\DarkTheme\img\portfolio\fullsize\2.jpg" />
+    <Content Include="Content\DarkTheme\img\portfolio\fullsize\3.jpg" />
+    <Content Include="Content\DarkTheme\img\portfolio\fullsize\4.jpg" />
+    <Content Include="Content\DarkTheme\img\portfolio\fullsize\5.jpg" />
+    <Content Include="Content\DarkTheme\img\portfolio\fullsize\6.jpg" />
+    <Content Include="Content\DarkTheme\img\portfolio\thumbnails\1.jpg" />
+    <Content Include="Content\DarkTheme\img\portfolio\thumbnails\2.jpg" />
+    <Content Include="Content\DarkTheme\img\portfolio\thumbnails\3.jpg" />
+    <Content Include="Content\DarkTheme\img\portfolio\thumbnails\4.jpg" />
+    <Content Include="Content\DarkTheme\img\portfolio\thumbnails\5.jpg" />
+    <Content Include="Content\DarkTheme\img\portfolio\thumbnails\6.jpg" />
+    <Content Include="Content\DarkTheme\js\creative.js" />
+    <Content Include="Content\DarkTheme\js\creative.min.js" />
+    <Content Include="Content\DarkTheme\vendor\bootstrap\css\bootstrap.css" />
+    <Content Include="Content\DarkTheme\vendor\bootstrap\css\bootstrap.min.css" />
+    <Content Include="Content\DarkTheme\vendor\bootstrap\fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="Content\DarkTheme\vendor\bootstrap\js\bootstrap.js" />
+    <Content Include="Content\DarkTheme\vendor\bootstrap\js\bootstrap.min.js" />
+    <Content Include="Content\DarkTheme\vendor\font-awesome\css\font-awesome.css" />
+    <Content Include="Content\DarkTheme\vendor\font-awesome\css\font-awesome.min.css" />
+    <Content Include="Content\DarkTheme\vendor\font-awesome\fonts\fontawesome-webfont.svg" />
+    <Content Include="Content\DarkTheme\vendor\jquery\jquery.js" />
+    <Content Include="Content\DarkTheme\vendor\jquery\jquery.min.js" />
+    <Content Include="Content\DarkTheme\vendor\magnific-popup\jquery.magnific-popup.js" />
+    <Content Include="Content\DarkTheme\vendor\magnific-popup\jquery.magnific-popup.min.js" />
+    <Content Include="Content\DarkTheme\vendor\magnific-popup\magnific-popup.css" />
+    <Content Include="Content\DarkTheme\vendor\scrollreveal\scrollreveal.js" />
+    <Content Include="Content\DarkTheme\vendor\scrollreveal\scrollreveal.min.js" />
     <Content Include="Content\Styles\LandingPage.css" />
     <Content Include="Content\Styles\Popup.css" />
     <Content Include="Content\Styles\Site.css" />
+    <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Scripts\bootstrap.js" />
@@ -215,6 +248,46 @@
     <Content Include="Content\Bootstrap\bootstrap.css.map" />
     <Content Include="Content\Bootstrap\bootstrap-theme.min.css.map" />
     <Content Include="Content\Bootstrap\bootstrap-theme.css.map" />
+    <Content Include="Content\DarkTheme\less\creative.less" />
+    <Content Include="Content\DarkTheme\less\mixins.less" />
+    <Content Include="Content\DarkTheme\less\variables.less" />
+    <Content Include="Content\DarkTheme\vendor\bootstrap\fonts\glyphicons-halflings-regular.eot" />
+    <Content Include="Content\DarkTheme\vendor\bootstrap\fonts\glyphicons-halflings-regular.ttf" />
+    <Content Include="Content\DarkTheme\vendor\bootstrap\fonts\glyphicons-halflings-regular.woff" />
+    <Content Include="Content\DarkTheme\vendor\bootstrap\fonts\glyphicons-halflings-regular.woff2" />
+    <Content Include="Content\DarkTheme\vendor\font-awesome\fonts\fontawesome-webfont.eot" />
+    <Content Include="Content\DarkTheme\vendor\font-awesome\fonts\fontawesome-webfont.ttf" />
+    <Content Include="Content\DarkTheme\vendor\font-awesome\fonts\fontawesome-webfont.woff" />
+    <Content Include="Content\DarkTheme\vendor\font-awesome\fonts\fontawesome-webfont.woff2" />
+    <Content Include="Content\DarkTheme\vendor\font-awesome\fonts\FontAwesome.otf" />
+    <Content Include="Content\DarkTheme\vendor\font-awesome\less\animated.less" />
+    <Content Include="Content\DarkTheme\vendor\font-awesome\less\bordered-pulled.less" />
+    <Content Include="Content\DarkTheme\vendor\font-awesome\less\core.less" />
+    <Content Include="Content\DarkTheme\vendor\font-awesome\less\fixed-width.less" />
+    <Content Include="Content\DarkTheme\vendor\font-awesome\less\font-awesome.less" />
+    <Content Include="Content\DarkTheme\vendor\font-awesome\less\icons.less" />
+    <Content Include="Content\DarkTheme\vendor\font-awesome\less\larger.less" />
+    <Content Include="Content\DarkTheme\vendor\font-awesome\less\list.less" />
+    <Content Include="Content\DarkTheme\vendor\font-awesome\less\mixins.less" />
+    <Content Include="Content\DarkTheme\vendor\font-awesome\less\path.less" />
+    <Content Include="Content\DarkTheme\vendor\font-awesome\less\rotated-flipped.less" />
+    <Content Include="Content\DarkTheme\vendor\font-awesome\less\screen-reader.less" />
+    <Content Include="Content\DarkTheme\vendor\font-awesome\less\stacked.less" />
+    <Content Include="Content\DarkTheme\vendor\font-awesome\less\variables.less" />
+    <Content Include="Content\DarkTheme\vendor\font-awesome\scss\font-awesome.scss" />
+    <Content Include="Content\DarkTheme\vendor\font-awesome\scss\_animated.scss" />
+    <Content Include="Content\DarkTheme\vendor\font-awesome\scss\_bordered-pulled.scss" />
+    <Content Include="Content\DarkTheme\vendor\font-awesome\scss\_core.scss" />
+    <Content Include="Content\DarkTheme\vendor\font-awesome\scss\_fixed-width.scss" />
+    <Content Include="Content\DarkTheme\vendor\font-awesome\scss\_icons.scss" />
+    <Content Include="Content\DarkTheme\vendor\font-awesome\scss\_larger.scss" />
+    <Content Include="Content\DarkTheme\vendor\font-awesome\scss\_list.scss" />
+    <Content Include="Content\DarkTheme\vendor\font-awesome\scss\_mixins.scss" />
+    <Content Include="Content\DarkTheme\vendor\font-awesome\scss\_path.scss" />
+    <Content Include="Content\DarkTheme\vendor\font-awesome\scss\_rotated-flipped.scss" />
+    <Content Include="Content\DarkTheme\vendor\font-awesome\scss\_screen-reader.scss" />
+    <Content Include="Content\DarkTheme\vendor\font-awesome\scss\_stacked.scss" />
+    <Content Include="Content\DarkTheme\vendor\font-awesome\scss\_variables.scss" />
     <None Include="Properties\PublishProfiles\IISPub.pubxml" />
     <None Include="Scripts\jquery-3.1.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.1.1.js" />
