--- a/CursachPrototype/Web.config
+++ b/CursachPrototype/Web.config
@@ -13,6 +13,7 @@
     <add name="Hangfire" providerName="System.Data.SqlClient" connectionString="Server=.\SQLEXPRESS;Database=Hangfire;Integrated security=SSPI" />
     <add name="IdentityDbOleDb" connectionString="Provider=SQLOLEDB;Data Source=.\SQLEXPRESS;Initial Catalog=FastSqlIdentity;Integrated Security = SSPI" />
     <add name="SqlServerMaster" providerName="System.Data.SqlClient" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=master;Integrated security=SSPI" />
+    <add name="MySqlMaster" providerName="System.Data.MySqlClient" connectionString="Server=localhost;Database=sys;Uid=root;Pwd=Ipsoshotel;"/>
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
