--- a/DataProxy/DataProxy.csproj
+++ b/DataProxy/DataProxy.csproj
@@ -48,6 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Creators\MySqlCreator.cs" />
     <Compile Include="DataBaseReaders\IDataBaseReader.cs" />
     <Compile Include="DataBaseReaders\OleDbDataBaseReader.cs" />
     <Compile Include="DataService.cs" />
