Added publishing profile

--- a/CursachPrototype/Web.config
+++ b/CursachPrototype/Web.config
@@ -11,7 +11,7 @@
   <connectionStrings>
     <add name="IdentityDb" providerName="System.Data.SqlClient" connectionString="Data Source=localhost;Initial Catalog=FastSqlIdentity;Integrated security=SSPI" />
     <add name="Hangfire" providerName="System.Data.SqlClient" connectionString="Server=localhost;Database=Hangfire;Integrated security=SSPI" />
-    <add name="IdentityDbOleDb" connectionString="Provider=SQLOLEDB;Data Source=localhost;Initial Catalog=FastSqlIdentity;Integrated Security = SSPI" />
+    <add name="IdentityDbOleDb" providerName="SQLOLEDB" connectionString="Data Source=localhost;Initial Catalog=FastSqlIdentity;Integrated Security = SSPI" />
     <add name="SqlServerMaster" providerName="System.Data.SqlClient" connectionString="Data Source=localhost;Initial Catalog=master;Integrated security=SSPI" />
   </connectionStrings>
   <appSettings>
